# ComputerVisionReconstruction

./: .gitignore  CMakeLists.txt  Readme.md
apps/: CMakeLists.txt  background_averager.cpp  camera_calibrator.cpp  checkerboard_marking.cpp  extrinsics_configurator.cpp  image_extractor.cpp  voxel_clusterer.cpp
data/cam1/: boardcorners.xml  intrinsics.xml
data/cam2/: boardcorners.xml  intrinsics.xml
data/cam3/: boardcorners.xml  intrinsics.xml
data/cam4/: boardcorners.xml  intrinsics.xml
libs/: CMakeLists.txt
libs/reconstructor/: Camera.cpp  Camera.h  ClusterLabeler.cpp  ClusterLabeler.h  ForegroundOptimizer.cpp  ForegroundOptimizer.h  Reconstructor.cpp  Reconstructor.h  Voxel.h
src/: VoxelReconstruction.cpp  VoxelReconstruction.h  main.cpp
src/controllers/: ArcBall.cpp  ArcBall.h  Camera.cpp  Camera.h  ForegroundOptimizer.cpp  ForegroundOptimizer.h  Glut.cpp  Glut.h  Reconstructor.cpp  Reconstructor.h  Renderer.cpp  Renderer.h  Scene3DRenderer.cpp  Scene3DRenderer.h
src/graphics/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  IndexedMesh.cpp  IndexedMesh.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Texture.cpp  Texture.h  Ui.cpp  Ui.h
src/graphics/private_impl/: ComputePipeline.cpp  ComputePipeline.h  GraphicsPipeline.cpp  GraphicsPipeline.h
src/utilities/: General.h
